enh(model): Add link Landing -> Sale